tests/ui/async-await/async-closures/ice-async-closure-variance-issue-148488.stderr
warning: type parameter `a` should have an upper camel case name
  --> $DIR/ice-async-closure-variance-issue-148488.rs:6:8
   |
LL | fn ord<a>() -> _ {
   |        ^ help: convert the identifier to upper camel case: `A`
   |
   = note: `#[warn(non_camel_case_types)]` (part of `#[warn(nonstandard_style)]`) on by default

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/ice-async-closure-variance-issue-148488.rs:6:16
   |
LL | fn ord<a>() -> _ {
   |                ^ not allowed in type signatures
   |
help: replace with an appropriate return type
   |
LL - fn ord<a>() -> _ {
LL + fn ord<a>() -> impl AsyncFn() {
   |

error[E0392]: lifetime parameter `'g` is never used
  --> $DIR/ice-async-closure-variance-issue-148488.rs:3:10
   |
LL | struct T<'g>();
   |          ^^ unused lifetime parameter
   |
   = help: consider removing `'g`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 2 previous errors; 1 warning emitted

Some errors have detailed explanations: E0121, E0392.
For more information about an error, try `rustc --explain E0121`.
